feat: 增加macos平台支持