@@ -150,6 +150,10 @@ jar {
     }
 }
 
+run {
+    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls']
+}
+
 gluonfx {
     graalvmHome = 'E:\\StudyTools\\graalvm-ce-java17-22.3.2'
 }
@@ -207,6 +211,13 @@ jlink {
                     '--linux-app-category', 'video;',
                     '--linux-rpm-license-type', 'GPL-3.0-only',
                     '--resource-dir', "${projectDir}/resources/logo"
+            ]
+        } else if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
+            icon = "${projectDir}/resources/logo/FreeBox.icns"
+            installerOptions += [
+                    '--mac-sign',
+                    '--mac-signing-key-user-name', 'knifer',
+                    '--mac-app-category', 'public.app-category.video'
             ]
         }
     }
